feat: clicar no horario leva para a pagina de seleçao de assentos

--- a/src/FilmeHorarios/FilmeHorarios.css
+++ b/src/FilmeHorarios/FilmeHorarios.css
@@ -4,6 +4,8 @@
     background-color: #DFE6ED;
     display: flex;
     align-items: center;
+    position: fixed;
+    bottom: 0;
 }
 
 .rodape img{
